feat: section-mission

--- a/index.html
+++ b/index.html
@@ -91,18 +91,15 @@
 <!-- BANNER  BLACK -->
   <section class="clear-fix img section-black-banner">
     <div class="clear-fix sheet sheet-1">
-      <h2 class="    text  text-1 color-white">Historias de gatos,
+      <h2 class="text text-1 color-white">Historias de gatos,
         noticias, consejos y trucos</h2>
       <h5 class="text text-body-alt-color text-2 color-white">CONSEJOS PARA LA VIDA CON GATOS</h5>
     </div>
   </section>
 <!-- MISION -->
-  <section class="clear-fix u-grey-10 section-mission">
-    <div class="clear-fix sheet sheet-1">
-      <div class="clear-fix   layout-wrap layout-wrap-1">
-        <div class=" ">
-          <div class="d-flex">
-            <div class="  layout-cell u-left-cell layout-cell-1">
+  <section class="clear-fix u-grey-10 section-mission container">
+          <div class="d-flex row first-row">
+            <div class="layout-cell u-left-cell layout-cell-1 col-lg-4 col-md-4">
               <div class="container-layout container-layout-1">
                 <h2 class="text text-default text-1">Clínica veterinaria</h2>
                 <h1 class="text text-default text-2">Rescatar un
@@ -113,10 +110,10 @@
                   seis y las 11 semanas.</p>
               </div>
             </div>
-            <div class=" img layout-cell img-1">
+            <div class=" img layout-cell img-1 col-lg-4 col-md-4">
               <div class="container-layout container-layout-2"></div>
             </div>
-            <div class="layout-cell layout-cell-3">
+            <div class="layout-cell layout-cell-3 col-lg-4 col-md-4 bg-black">
               <div
                 class="container-layout container-layout-3 bg-black">
                 <img src="//images03.nicepage.io/a1389d7bc73adea1e1c1fb7e/ebea86f6b57d55b0a7ec7452/555.png" alt
@@ -125,10 +122,8 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
   </section>
+  <!-- DETAIL -->
   <section class="clear-fix   u-section-6">
     <div class="clear-fix   layout-wrap layout-wrap-1">
       <div>
