feat: section-detail

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
         </div>
         <!-- SEGUNDA FILA -->
         <div class="d-flex justify-content-center p-0 first-row">
-          <div
-            class="text-center col-lg-4 col-md-4 layout-cell u-left-cell layout-cell-4 d-flex align-items-center">
+          <div class="text-center col-lg-4 col-md-4 layout-cell u-left-cell layout-cell-4 d-flex align-items-center">
             <div class="container-layout   container-layout-4">
               <span class="icon icon-circle icon-3">
                 <i class="fa-solid fa-dog" style="font-size: 60px;"></i>
@@ -74,8 +73,7 @@
           <div class="col-lg-4 col-md-4 img  layout-cell   img-2">
             <div class="container-layout container-layout-5"></div>
           </div>
-          <div
-            class="text-center col-lg-4 col-md-4 layout-cell layout-cell-6 d-flex align-items-center">
+          <div class="text-center col-lg-4 col-md-4 layout-cell layout-cell-6 d-flex align-items-center">
             <div class="container-layout container-layout-6">
               <span class="icon icon-circle icon-4">
                 <i class="fa-solid fa-cat" style="font-size: 60px;"></i>
@@ -88,7 +86,7 @@
       </div>
     </div>
   </section>
-<!-- BANNER  BLACK -->
+  <!-- BANNER  BLACK -->
   <section class="clear-fix img section-black-banner">
     <div class="clear-fix sheet sheet-1">
       <h2 class="text text-1 color-white">Historias de gatos,
@@ -96,39 +94,36 @@
       <h5 class="text text-body-alt-color text-2 color-white">CONSEJOS PARA LA VIDA CON GATOS</h5>
     </div>
   </section>
-<!-- MISION -->
-  <section class="clear-fix u-grey-10 section-mission container">
-          <div class="d-flex row first-row">
-            <div class="layout-cell u-left-cell layout-cell-1 col-lg-4 col-md-4">
-              <div class="container-layout container-layout-1">
-                <h2 class="text text-default text-1">Clínica veterinaria</h2>
-                <h1 class="text text-default text-2">Rescatar un
-                  <b> Mascota </b>
-                </h1>
-                <p class="text text-default text-3">Dado que los cachorros recién abandonados compiten entre sí
-                  por las fibras del corazón humano, la evolución dice que deberían ser más adorables alrededor de las
-                  seis y las 11 semanas.</p>
-              </div>
-            </div>
-            <div class=" img layout-cell img-1 col-lg-4 col-md-4">
-              <div class="container-layout container-layout-2"></div>
-            </div>
-            <div class="layout-cell layout-cell-3 col-lg-4 col-md-4 bg-black">
-              <div
-                class="container-layout container-layout-3 bg-black">
-                <img src="//images03.nicepage.io/a1389d7bc73adea1e1c1fb7e/ebea86f6b57d55b0a7ec7452/555.png" alt
-                  class="  img img-default img-2" data-image-width="650"
-                  data-image-height="461">
-              </div>
-            </div>
-          </div>
+  <!-- MISION -->
+  <section class="clear-fix u-grey-10 section-mission container mt-5">
+    <div class="d-flex row first-row">
+      <div class="layout-cell u-left-cell layout-cell-1 col-lg-4 col-md-4">
+        <div class="container-layout container-layout-1">
+          <h2 class="text text-default text-1">Clínica veterinaria</h2>
+          <h1 class="text text-default text-2">Rescatar un
+            <b> Mascota </b>
+          </h1>
+          <p class="text text-default text-3">Dado que los cachorros recién abandonados compiten entre sí
+            por las fibras del corazón humano, la evolución dice que deberían ser más adorables alrededor de las
+            seis y las 11 semanas.</p>
+        </div>
+      </div>
+      <div class="img layout-cell img-1 col-lg-4 col-md-4">
+        <div class="container-layout container-layout-2"></div>
+      </div>
+      <div class="layout-cell layout-cell-3 col-lg-4 col-md-4 bg-black">
+        <div class="container-layout container-layout-3 bg-black">
+          <img src="//images03.nicepage.io/a1389d7bc73adea1e1c1fb7e/ebea86f6b57d55b0a7ec7452/555.png" alt
+            class="img img-default img-2" data-image-width="650" data-image-height="461">
+        </div>
+      </div>
+    </div>
   </section>
   <!-- DETAIL -->
-  <section class="clear-fix   u-section-6">
-    <div class="clear-fix   layout-wrap layout-wrap-1">
-      <div>
-        <div class="d-flex">
-          <div>
+  <section class="clear-fix section-detail container mt-5 mb-5">
+    <div class="clear-fix layout-wrap layout-wrap-1">
+        <div class="d-flex row first-row">
+          <div class="col-lg-4 col-md-4">
             <div class="d-flex">
               <div class="u-align-right u-grey-10 layout-cell u-left-cell layout-cell-1">
                 <div class="container-layout u-valign-bottom container-layout-1">
@@ -139,14 +134,14 @@
               </div>
             </div>
           </div>
-          <div>
+          <div class="col-lg-4 col-md-4">
             <div class="d-flex">
-              <div class="img layout-cell img-1">
+              <div class="img layout-cell img-1 w-100">
                 <div class="container-layout container-layout-2"></div>
               </div>
             </div>
           </div>
-          <div>
+          <div class="col-lg-4 col-md-4">
             <div class="d-flex">
               <div class="layout-cell layout-cell-3">
                 <div class="container-layout container-layout-3"></div>
@@ -160,17 +155,17 @@
                     <br />
                   </p>
                   <div class="u-social-icons u-spacing-23 u-social-icons-1">
-                    <a class="u-social-url" target="_blank" href>
+                    <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
                       <span class="icon icon-circle u-social-facebook u-social-type-logo icon-1">
                         <i class="fa-brands fa-facebook" style="font-size: 20px;"></i>
                       </span>
                     </a>
-                    <a class="u-social-url" target="_blank" href>
+                    <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
                       <span class="icon icon-circle u-social-twitter u-social-type-logo icon-2">
                         <i class="fa-brands fa-twitter" style="font-size: 20px;"></i>
                       </span>
                     </a>
-                    <a class="u-social-url" target="_blank" href>
+                    <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
                       <span class="icon icon-circle u-social-instagram u-social-type-logo icon-3">
                         <i class="fa-brands fa-instagram" style="font-size: 20px;"></i>
                       </span>
@@ -181,9 +176,9 @@
             </div>
           </div>
         </div>
-      </div>
     </div>
   </section>
+  <!-- PROFILE -->
   <section class="clear-fix img  -xl u-section-7">
     <div class="clear-fix  -sm  -xs layout-wrap layout-wrap-1">
       <div class=" ">
@@ -200,8 +195,7 @@
                 los servicios</a>
             </div>
           </div>
-          <div class=" img  layout-cell   u-size-31 img-1" data-image-width="1277"
-            data-image-height="1229">
+          <div class=" img  layout-cell   u-size-31 img-1" data-image-width="1277" data-image-height="1229">
             <div class="container-layout container-layout-2"></div>
           </div>
         </div>
