feat: section-profile

--- a/index.html
+++ b/index.html
@@ -179,9 +179,8 @@
     </div>
   </section>
   <!-- PROFILE -->
-  <section class="clear-fix img  -xl u-section-7">
-    <div class="clear-fix  -sm  -xs layout-wrap layout-wrap-1">
-      <div class=" ">
+  <section class="clear-fix img u-section-7">
+    <div class="clear-fix layout-wrap layout-wrap-1 container">
         <div class="d-flex">
           <div class="u-align-left   layout-cell u-left-cell u-size-29  layout-cell-1">
             <div class="container-layout   container-layout-1">
@@ -199,7 +198,6 @@
             <div class="container-layout container-layout-2"></div>
           </div>
         </div>
-      </div>
     </div>
   </section>
   <section class="text-center   clear-fix u-section-8">
