feat: view-information

--- a/index.html
+++ b/index.html
@@ -122,102 +122,99 @@
   <!-- DETAIL -->
   <section class="clear-fix section-detail container mt-5 mb-5">
     <div class="clear-fix layout-wrap layout-wrap-1">
-        <div class="d-flex row first-row">
-          <div class="col-lg-4 col-md-4">
-            <div class="d-flex">
-              <div class="u-align-right u-grey-10 layout-cell u-left-cell layout-cell-1">
-                <div class="container-layout u-valign-bottom container-layout-1">
-                  <h5 class="text text-1">Entrenamiento canino</h5>
-                  <h2 class="text text-2">Usamos métodos de entrenamiento de
-                    perros humanos, naturales</h2>
-                </div>
+      <div class="d-flex row first-row">
+        <div class="col-lg-4 col-md-6">
+          <div class="d-flex">
+            <div class="u-align-right u-grey-10 layout-cell u-left-cell layout-cell-1">
+              <div class="container-layout u-valign-bottom container-layout-1">
+                <h5 class="text text-1">Entrenamiento canino</h5>
+                <h2 class="text text-2">Usamos métodos de entrenamiento de
+                  perros humanos, naturales</h2>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4">
-            <div class="d-flex">
-              <div class="img layout-cell img-1 w-100">
-                <div class="container-layout container-layout-2"></div>
-              </div>
+        </div>
+        <div class="col-lg-4 col-md-6">
+          <div class="d-flex">
+            <div class="img layout-cell img-1 w-100">
+              <div class="container-layout container-layout-2"></div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4">
-            <div class="d-flex">
-              <div class="layout-cell layout-cell-3">
-                <div class="container-layout container-layout-3"></div>
-              </div>
-              <div class="layout-cell layout-cell-4">
-                <div class="container-layout container-layout-4">
-                  <p class="text text-3">Positive Dog Training es un enfoque basado en recompensas para enseñar a
-                    los padres de mascotas cómo piensan, aprenden y se comunican los perros. Nos enfocamos en
-                    recompensar los comportamientos que nos gustan para fomentar el comportamiento apropiado del perro
-                    en el mundo real.
-                    <br />
-                  </p>
-                  <div class="u-social-icons u-spacing-23 u-social-icons-1">
-                    <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
-                      <span class="icon icon-circle u-social-facebook u-social-type-logo icon-1">
-                        <i class="fa-brands fa-facebook" style="font-size: 20px;"></i>
-                      </span>
-                    </a>
-                    <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
-                      <span class="icon icon-circle u-social-twitter u-social-type-logo icon-2">
-                        <i class="fa-brands fa-twitter" style="font-size: 20px;"></i>
-                      </span>
-                    </a>
-                    <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
-                      <span class="icon icon-circle u-social-instagram u-social-type-logo icon-3">
-                        <i class="fa-brands fa-instagram" style="font-size: 20px;"></i>
-                      </span>
-                    </a>
-                  </div>
+        </div>
+        <div class="col-lg-4 col-md-12">
+          <div class="d-flex">
+            <div class="layout-cell layout-cell-4">
+              <div class="container-layout container-layout-4">
+                <p class="text text-3">Positive Dog Training es un enfoque basado en recompensas para enseñar a
+                  los padres de mascotas cómo piensan, aprenden y se comunican los perros. Nos enfocamos en
+                  recompensar los comportamientos que nos gustan para fomentar el comportamiento apropiado del perro
+                  en el mundo real.
+                  <br />
+                </p>
+                <div class="d-flex gap-3 mt-2">
+                  <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
+                    <span class="icon icon-circle u-social-facebook u-social-type-logo icon-1">
+                      <i class="fa-brands fa-facebook" style="font-size: 20px;"></i>
+                    </span>
+                  </a>
+                  <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
+                    <span class="icon icon-circle u-social-twitter u-social-type-logo icon-2">
+                      <i class="fa-brands fa-twitter" style="font-size: 20px;"></i>
+                    </span>
+                  </a>
+                  <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
+                    <span class="icon icon-circle u-social-instagram u-social-type-logo icon-3">
+                      <i class="fa-brands fa-instagram" style="font-size: 20px;"></i>
+                    </span>
+                  </a>
                 </div>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </div>
   </section>
   <!-- PROFILE -->
-  <section class="clear-fix img u-section-7">
-    <div class="clear-fix layout-wrap layout-wrap-1 container">
-        <div class="d-flex">
-          <div class="u-align-left   layout-cell u-left-cell u-size-29  layout-cell-1">
-            <div class="container-layout   container-layout-1">
-              <h1 class="    text text-1">Perro básico</h1>
-              <h2 class="text text-default text-2"> Formación</h2>
-              <p class="text text-3">Ya sea que planee competir en deportes y eventos caninos, es fundamental que
-                todos los perros reciban un entrenamiento básico, desde cómo caminar bien con correa hasta sentirse
-                cómodos con extraños.</p>
-              <a href="#"
-                class="u-active-black   u-border-radius-0 u-btn u-btn-rectangle u-button-style u-hover-grey-50 u-btn-1">Todos
-                los servicios</a>
-            </div>
-          </div>
-          <div class=" img  layout-cell   u-size-31 img-1" data-image-width="1277" data-image-height="1229">
-            <div class="container-layout container-layout-2"></div>
-          </div>
+  <section class="clear-fix img profile d-flex justify-content-center gradiente-white-to-">
+    <div class="d-flex clear-fix layout-wrap layout-wrap-1 container row m-0">
+      <div
+        class="u-align-left   layout-cell u-left-cell u-size-29  layout-cell-1 col-lg-6 col-md-6 d-flex align-items-center">
+        <div class="container-layout   container-layout-1">
+          <h1 class="    text text-1">Perro básico</h1>
+          <h2 class="text text-default text-2"> Formación</h2>
+          <p class="text text-3 mb-5">Ya sea que planee competir en deportes y eventos caninos, es fundamental que
+            todos los perros reciban un entrenamiento básico, desde cómo caminar bien con correa hasta sentirse
+            cómodos con extraños.</p>
+          <a href="#" class="btn-black text-uppercase font-weight-bold">Todos
+            los servicios</a>
         </div>
+      </div>
+      <div class=" img  layout-cell   u-size-31 img-1  col-lg-6 col-md-6" data-image-width="1277"
+        data-image-height="1229">
+        <div class="container-layout container-layout-2"></div>
+      </div>
     </div>
   </section>
-  <section class="text-center   clear-fix u-section-8">
-    <div class="clear-fix sheet   sheet-1">
-      <h2 class="    text text-1">Nos enfocamos en recompensar los comportamientos
+  <!-- INFORMATION -->
+  <section class="text-center clear-fix information bg-black">
+    <div class="clear-fix sheet sheet-1 d-flex flex-column align-items-center justify-content-center">
+      <h2 class="color-white text text-1 m-0">Nos enfocamos en recompensar los comportamientos
         que nos gustan para fomentar los
         <b> comportamiento del perro en el mundo real. </b>
       </h2>
-      <div class="u-social-icons u-spacing-10 u-social-icons-1">
-        <a class="u-social-url" target="_blank" href>
+      <div class="d-flex gap-4 justify-content-center mt-3">
+        <a class="u-social-url color-white" target="_blank" href>
           <span class="icon icon-circle u-social-facebook u-social-type-logo icon-1">
             <i class="fa-brands fa-facebook-f" style="font-size: 30px;"></i>
           </span>
         </a>
-        <a class="u-social-url" target="_blank" href>
+        <a class="u-social-url color-white" target="_blank" href>
           <span class="icon icon-circle u-social-twitter u-social-type-logo icon-2">
             <i class="fa-brands fa-twitter" style="font-size: 30px;"></i>
           </span>
         </a>
-        <a class="u-social-url" target="_blank" href>
+        <a class="u-social-url color-white" target="_blank" href>
           <span class="icon icon-circle u-social-instagram u-social-type-logo icon-3">
             <i class="fa-brands fa-instagram" style="font-size: 30px;"></i>
           </span>
@@ -242,7 +239,7 @@
               class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required>
           </div>
           <div class="u-form-group u-form-submit">
-            <a href="#" class="  u-btn u-btn-submit u-button-style u-btn-1">Enviar</a>
+            <a href="#" class="  u-btn-submit  u-btn-1">Enviar</a>
             <input type="submit" value="submit" class="u-form-control-hidden">
           </div>
           <div class="u-form-send-message u-form-send-success">
