feat: view-contact

--- a/index.html
+++ b/index.html
@@ -88,33 +88,35 @@
   </section>
   <!-- BANNER  BLACK -->
   <section class="clear-fix img section-black-banner">
-    <div class="clear-fix sheet sheet-1">
+    <div class="clear-fix sheet sheet-1 container">
       <h2 class="text text-1 color-white">Historias de gatos,
         noticias, consejos y trucos</h2>
       <h5 class="text text-body-alt-color text-2 color-white">CONSEJOS PARA LA VIDA CON GATOS</h5>
     </div>
   </section>
   <!-- MISION -->
-  <section class="clear-fix u-grey-10 section-mission container mt-5">
-    <div class="d-flex row first-row">
-      <div class="layout-cell u-left-cell layout-cell-1 col-lg-4 col-md-4">
-        <div class="container-layout container-layout-1">
-          <h2 class="text text-default text-1">Clínica veterinaria</h2>
-          <h1 class="text text-default text-2">Rescatar un
-            <b> Mascota </b>
-          </h1>
-          <p class="text text-default text-3">Dado que los cachorros recién abandonados compiten entre sí
-            por las fibras del corazón humano, la evolución dice que deberían ser más adorables alrededor de las
-            seis y las 11 semanas.</p>
+  <section class="clear-fix u-grey-10 section-mission bg-gray">
+    <div class="container">
+      <div class="d-flex row first-row">
+        <div class="layout-cell u-left-cell layout-cell-1 col-lg-4 col-md-4">
+          <div class="container-layout container-layout-1">
+            <h2 class="text text-default text-1">Clínica veterinaria</h2>
+            <h1 class="text text-default text-2">Rescatar un
+              <b> Mascota </b>
+            </h1>
+            <p class="text text-default text-3">Dado que los cachorros recién abandonados compiten entre sí
+              por las fibras del corazón humano, la evolución dice que deberían ser más adorables alrededor de las
+              seis y las 11 semanas.</p>
+          </div>
         </div>
-      </div>
-      <div class="img layout-cell img-1 col-lg-4 col-md-4">
-        <div class="container-layout container-layout-2"></div>
-      </div>
-      <div class="layout-cell layout-cell-3 col-lg-4 col-md-4 bg-black">
-        <div class="container-layout container-layout-3 bg-black">
-          <img src="//images03.nicepage.io/a1389d7bc73adea1e1c1fb7e/ebea86f6b57d55b0a7ec7452/555.png" alt
-            class="img img-default img-2" data-image-width="650" data-image-height="461">
+        <div class="img layout-cell img-1 col-lg-4 col-md-4">
+          <div class="container-layout container-layout-2"></div>
+        </div>
+        <div class="layout-cell layout-cell-3 col-lg-4 col-md-4 bg-black">
+          <div class="container-layout container-layout-3 bg-black">
+            <img src="//images03.nicepage.io/a1389d7bc73adea1e1c1fb7e/ebea86f6b57d55b0a7ec7452/555.png" alt
+              class="img img-default img-2" data-image-width="650" data-image-height="461">
+          </div>
         </div>
       </div>
     </div>
@@ -222,33 +224,25 @@
       </div>
     </div>
   </section>
-  <section class="u-align-right clear-fix img u-section-9">
+  <!-- CONTACT -->
+  <section class="u-align-right clear-fix img contact">
     <div class="clear-fix sheet   sheet-1">
-      <h1 class="    text text-1">¿Necesitas un corazón dulce?</h1>
-      <h4 class="  text text-2">Ya sea que planee competir en deportes y eventos caninos, es fundamental
+      <h1 class="text-end text text-1">¿Necesitas un corazón dulce?</h1>
+      <h4 class="text text-2">Ya sea que planee competir en deportes y eventos caninos, es fundamental
         que todos los perros reciban un entrenamiento básico, desde cómo caminar bien con correa hasta sentirse cómodos
         con extraños.</h4>
       <div class="u-form u-form-1">
-        <form action="https://nicepage.com/editor/Forms/Process" method="POST"
-          class="u-block-c544-6 clear-fix u-form-horizontal u-form-spacing-0 u-inner-form" source="email">
-          <input type="hidden" id="siteId" name="siteId" value="61799">
-          <input type="hidden" id="pageId" name="pageId" value="61800">
-          <div class="u-form-group u-form-name">
-            <label for="name-f351" class="u-form-control-hidden u-label">Name</label>
-            <input type="text" placeholder="Enter your Name" id="name-f351" name="name"
-              class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required>
+        <form action="" method="POST" class="clear-fix d-flex flex-column align-items-end" source="email">
+          <div class="form-input ">
+            <input type="texT" placeholder="Enter your Name" name="name" class="input-text" required>
+            <input type="submit" value="ENVIAR" class="input-submit bg-black color-white border-0">
           </div>
-          <div class="u-form-group u-form-submit">
-            <a href="#" class="  u-btn-submit  u-btn-1">Enviar</a>
-            <input type="submit" value="submit" class="u-form-control-hidden">
-          </div>
-          <div class="u-form-send-message u-form-send-success">
-            Thank you! Your message has been sent.
+          <!-- <div class="u-form-send-message u-form-send-success">
+            ¡Gracias! Tu mensaje ha sido enviado.
           </div>
           <div class="u-form-send-error u-form-send-message">
-            Unable to send your message. Please fix errors then try again.
-          </div>
-          <input type="hidden" value name="recaptchaResponse">
+            No se pudo enviar su mensaje. Corrija los errores y vuelva a intentarlo.
+          </div> -->
         </form>
       </div>
     </div>
