--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
             </div>
           </div>
-          <div class="img  layout-cell   img-1 col-lg-4 col-md-4">
+          <div class="img layout-cell img-1 col-lg-4 col-md-4">
             <div class="container-layout container-layout-5"></div>
           </div>
         </div>
         <!-- SEGUNDA FILA -->
         <div class="d-flex justify-content-center p-0 first-row">
-          <div class="text-center col-lg-4 col-md-4 layout-cell u-left-cell layout-cell-4 d-flex align-items-center">
-            <div class="container-layout   container-layout-4">
+          <div class="text-center col-lg-4 col-md-4 layout-cell  layout-cell-4 d-flex align-items-center">
+            <div class="container-layout container-layout-4">
               <span class="icon icon-circle icon-3">
                 <i class="fa-solid fa-dog" style="font-size: 60px;"></i>
               </span>
@@ -95,10 +95,10 @@
     </div>
   </section>
   <!-- MISION -->
-  <section class="clear-fix u-grey-10 section-mission bg-gray">
+  <section class="clear-fix  section-mission bg-gray">
     <div class="container">
       <div class="d-flex row first-row">
-        <div class="layout-cell u-left-cell layout-cell-1 col-lg-4 col-md-4">
+        <div class="layout-cell  layout-cell-1 col-lg-4 col-md-4">
           <div class="container-layout container-layout-1">
             <h2 class="text text-default text-1">Clínica veterinaria</h2>
             <h1 class="text text-default text-2">Rescatar un
@@ -127,8 +127,8 @@
       <div class="d-flex row first-row">
         <div class="col-lg-4 col-md-6">
           <div class="d-flex">
-            <div class="u-align-right u-grey-10 layout-cell u-left-cell layout-cell-1">
-              <div class="container-layout u-valign-bottom container-layout-1">
+            <div class="  layout-cell  layout-cell-1">
+              <div class="container-layout container-layout-1">
                 <h5 class="text text-1">Entrenamiento canino</h5>
                 <h2 class="text text-2">Usamos métodos de entrenamiento de
                   perros humanos, naturales</h2>
@@ -154,18 +154,18 @@
                   <br />
                 </p>
                 <div class="d-flex gap-3 mt-2">
-                  <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
-                    <span class="icon icon-circle u-social-facebook u-social-type-logo icon-1">
+                  <a class=" text-decoration-none color-black gap-5" target="_blank" href>
+                    <span class="icon icon-circle icon-1">
                       <i class="fa-brands fa-facebook" style="font-size: 20px;"></i>
                     </span>
                   </a>
-                  <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
-                    <span class="icon icon-circle u-social-twitter u-social-type-logo icon-2">
+                  <a class=" text-decoration-none color-black gap-5" target="_blank" href>
+                    <span class="icon icon-circle icon-2">
                       <i class="fa-brands fa-twitter" style="font-size: 20px;"></i>
                     </span>
                   </a>
-                  <a class="u-social-url text-decoration-none color-black gap-5" target="_blank" href>
-                    <span class="icon icon-circle u-social-instagram u-social-type-logo icon-3">
+                  <a class=" text-decoration-none color-black gap-5" target="_blank" href>
+                    <span class="icon icon-circle icon-3">
                       <i class="fa-brands fa-instagram" style="font-size: 20px;"></i>
                     </span>
                   </a>
@@ -181,7 +181,7 @@
   <section class="clear-fix img profile d-flex justify-content-center gradiente-white-to-">
     <div class="d-flex clear-fix layout-wrap layout-wrap-1 container row m-0">
       <div
-        class="u-align-left   layout-cell u-left-cell u-size-29  layout-cell-1 col-lg-6 col-md-6 d-flex align-items-center">
+        class="layout-cell layout-cell-1 col-lg-6 col-md-6 d-flex align-items-center">
         <div class="container-layout   container-layout-1">
           <h1 class="    text text-1">Perro básico</h1>
           <h2 class="text text-default text-2"> Formación</h2>
@@ -192,7 +192,7 @@
             los servicios</a>
         </div>
       </div>
-      <div class=" img  layout-cell   u-size-31 img-1  col-lg-6 col-md-6" data-image-width="1277"
+      <div class=" img layout-cell img-1 col-lg-6 col-md-6" data-image-width="1277"
         data-image-height="1229">
         <div class="container-layout container-layout-2"></div>
       </div>
@@ -206,18 +206,18 @@
         <b> comportamiento del perro en el mundo real. </b>
       </h2>
       <div class="d-flex gap-4 justify-content-center mt-3">
-        <a class="u-social-url color-white" target="_blank" href>
-          <span class="icon icon-circle u-social-facebook u-social-type-logo icon-1">
+        <a class=" color-white" target="_blank" href>
+          <span class="icon icon-circle icon-1">
             <i class="fa-brands fa-facebook-f" style="font-size: 30px;"></i>
           </span>
         </a>
-        <a class="u-social-url color-white" target="_blank" href>
-          <span class="icon icon-circle u-social-twitter u-social-type-logo icon-2">
+        <a class=" color-white" target="_blank" href>
+          <span class="icon icon-circle  icon-2">
             <i class="fa-brands fa-twitter" style="font-size: 30px;"></i>
           </span>
         </a>
-        <a class="u-social-url color-white" target="_blank" href>
-          <span class="icon icon-circle u-social-instagram u-social-type-logo icon-3">
+        <a class=" color-white" target="_blank" href>
+          <span class="icon icon-circle   icon-3">
             <i class="fa-brands fa-instagram" style="font-size: 30px;"></i>
           </span>
         </a>
@@ -225,22 +225,22 @@
     </div>
   </section>
   <!-- CONTACT -->
-  <section class="u-align-right clear-fix img contact">
-    <div class="clear-fix sheet   sheet-1">
+  <section class="clear-fix img contact">
+    <div class="clear-fix sheet sheet-1">
       <h1 class="text-end text text-1">¿Necesitas un corazón dulce?</h1>
       <h4 class="text text-2">Ya sea que planee competir en deportes y eventos caninos, es fundamental
         que todos los perros reciban un entrenamiento básico, desde cómo caminar bien con correa hasta sentirse cómodos
         con extraños.</h4>
-      <div class="u-form u-form-1">
+      <div class="form form-1">
         <form action="" method="POST" class="clear-fix d-flex flex-column align-items-end" source="email">
           <div class="form-input ">
             <input type="texT" placeholder="Enter your Name" name="name" class="input-text" required>
             <input type="submit" value="ENVIAR" class="input-submit bg-black color-white border-0">
           </div>
-          <!-- <div class="u-form-send-message u-form-send-success">
+          <!-- <div>
             ¡Gracias! Tu mensaje ha sido enviado.
           </div>
-          <div class="u-form-send-error u-form-send-message">
+          <div>
             No se pudo enviar su mensaje. Corrija los errores y vuelva a intentarlo.
           </div> -->
         </form>
